# a-star

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  birb3d
assets/shaders/: black_frag.glsl  blue_frag.glsl  closed_frag.glsl  green_frag.glsl  obstacle_frag.glsl  open_frag.glsl  red_frag.glsl  route_frag.glsl  unexplored_frag.glsl  white_frag.glsl
include/: Game.hpp  Tile.hpp
src/: game.cpp  main.cpp
